# scraper

./: LICENSE  README.md  pyproject.toml  scraper.py  scrapync.py
tests/: test_functions.py  test_linkextractor.py  test_scraper.py
