[project]
name = "scraper"
description = "Scraper in python using asyncio"
dynamic = ["version"]
readme = "README.md"

[project.scripts]
scrape = "scraper:main"


[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "scraper.__version__" }
