[project]
name = "scraper"
description = "Scraper in python using asyncio"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
scrape = "scraper:entrypoint"


[project.optional-dependencies]
dev = [
    "black>=22.3.0",
    "coverage>=6.4.4",
    "pyproject-flake8>=0.0.1a5",
    "mypy>=0.971",
    "isort>=5.10.1",
]


[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "scraper.__version__" }

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
